--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
+asgiref==3.8.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 customtkinter==5.2.2
 darkdetect==0.8.0
+Django==5.1.6
+idna==3.10
+load-dotenv==0.1.0
 packaging==24.2
+pillow==11.1.0
+python-dotenv==1.0.1
+requests==2.32.3
+sqlparse==0.5.3
+tzdata==2025.1
+urllib3==2.3.0
